# Loko

./: unpacked-info.md
3D CAD/Loko Air/Loko-Air-Case/: L-A-Buttom.stl
3D CAD/Loko Ground/L-G-CASE/: L-G_TOP.stl  L_G_button.stl
Electronics/Air Unit/Gerber/: Loco Air-RoundHoles-Plated.TXT  Loco Air-SlotHoles-Plated.TXT  Loco Air-macro.APR_LIB  Loco Air.DRR  Loco Air.EXTREP  Loco Air.G1  Loco Air.GBL  Loco Air.GBO  Loco Air.GBP  Loco Air.GBS  Loco Air.GD1  Loco Air.GKO  Loco Air.GM4  Loco Air.GM8  Loco Air.GP1  Loco Air.GTL  Loco Air.GTO  Loco Air.GTP  Loco Air.GTS  Loco Air.LDP  Loco Air.REP  Loco Air.RUL  Loco Air.apr  Status Report.Txt
Electronics/Gerber/: Loco Air-SlotHoles-Plated.TXT  Loco Air.DRR  Loco Air.EXTREP  Loco Air.GBL  Loco Air.GBP  Loco Air.GP1  Loco Air.GTS  Loco Air.RUL  Loco Air.apr
Electronics/Gerber/__Previews/: Loco Air.LDPPreview
Electronics/Ground Unit/Gerber/: Loco Ground-RoundHoles-NonPlated.TXT  Loco Ground-RoundHoles-Plated.TXT  Loco Ground-SlotHoles-Plated.TXT  Loco Ground-macro.APR_LIB  Loco Ground.DRR  Loco Ground.EXTREP  Loco Ground.GBL  Loco Ground.GBO  Loco Ground.GBP  Loco Ground.GBS  Loco Ground.GD1  Loco Ground.GKO  Loco Ground.GM8  Loco Ground.GTL  Loco Ground.GTO  Loco Ground.GTP  Loco Ground.GTS  Loco Ground.LDP  Loco Ground.REP  Loco Ground.RUL  Loco Ground.apr  Status Report.Txt
Electronics/lokoAir/Gerber/: Loco Air-RoundHoles-NonPlated.TXT  Loco Air-RoundHoles-Plated.TXT  Loco Air-macro.APR_LIB  (+13 more)
Software/LokoAir Firmware/loko_air-main/: .clang-format  .clang-tidy  .cproject  .gitignore  .gitlab-ci.yml  .mxproject  .project  CHANGELOG.md  CMakeLists.txt  Kconfig  Loko_v2.ioc  README.md  build_tools.py  openocd-ft2232h.cfg
Software/LokoAir Firmware/loko_air-main/.devcontainer/: Dockerfile  bashrc.template  devcontainer.json
Software/LokoAir Firmware/loko_air-main/.ozone_config/: .gitignore  loko_app.jdebug  loko_bldr.jdebug  loko_e5_app.jdebug  loko_e5_bldr.jdebug
Software/LokoAir Firmware/loko_air-main/Core/: CMakeLists.txt
Software/LokoAir Firmware/loko_air-main/Core/Inc/: build_conf.h  compiler_abstraction.h  log_conf.h  log_io.h  settings_io.h  stm32wlxx_hal_conf.h  subghz_phy_app.h  utilities_conf.h  utils.h  version.h
Software/LokoAir Firmware/loko_air-main/Core/Src/: application.c  bootloader.c  subghz_phy_app.c  version.c
Software/LokoAir Firmware/loko_air-main/Core/Src/lorawan_app/: Commissioning.h  lora_app.c  lora_app.h  lora_app_version.h  lora_info.c  lora_info.h  lorawan_conf.h  platform.h  se-identity.h  stm32_systime.c  stm32_systime.h  stm32_timer.c  stm32_timer.h  systime.h  timer_if.c  timer_if.h
Software/LokoAir Firmware/loko_air-main/Core/bsp_cpputests/: CMakeLists.txt  bsp.h  bsp_fake.c  bsp_flash_fake.c  bsp_uart_fake.c  timer.h
Software/LokoAir Firmware/loko_air-main/Core/bsp_stm32wle5/: CMakeLists.txt  Kconfig  app_stm32wle5jcix_flash.ld  bldr_stm32wle5jcix_flash.ld  bsp.c  bsp.h  bsp_adc.c  bsp_adc.h  bsp_battery.c  bsp_battery.h  bsp_board.h  bsp_clocks.c  bsp_clocks.h  bsp_flash.c  bsp_flash.h  bsp_flash_layout.h  bsp_gpio.c  bsp_gpio.h  bsp_loko_air_v2_board_.h  bsp_loko_air_v2_seeed_e5_board_.h  bsp_low_power.c  bsp_low_power.h  bsp_rtc.c  bsp_rtc.h  bsp_stm32wlxx_it.c  bsp_subghz.c  bsp_subghz.h  bsp_uart.c  bsp_uart.h  startup_stm32wle5jcix.s  stm32wlxx_LoRa_E5_mini_errno.h  stm32wlxx_LoRa_E5_mini_radio.c  stm32wlxx_LoRa_E5_mini_radio.h  system_stm32wlxx.c
Software/LokoAir Firmware/loko_air-main/Core/bsp_stm32wle5/SubGHz_Phy/: mw_log_conf.h  radio_board_if.c  radio_board_if.h  radio_conf.h  timer.h
Software/LokoAir Firmware/loko_air-main/Core/cmd_line/: CMakeLists.txt  cmd_line.c  cmd_line.h
Software/LokoAir Firmware/loko_air-main/Core/crc16/: CMakeLists.txt  crc16.c  crc16.h
Software/LokoAir Firmware/loko_air-main/Core/encrypt_p2p_payload/: CMakeLists.txt  encrypt_p2p_payload.c  encrypt_p2p_payload.h
Software/LokoAir Firmware/loko_air-main/Core/gnss_trace/: CMakeLists.txt  gnss_trace.c  gnss_trace.h
Software/LokoAir Firmware/loko_air-main/Core/log_/: CMakeLists.txt  README.md  log_.c  log_.h
Software/LokoAir Firmware/loko_air-main/Core/queue/: CMakeLists.txt  queue.c  queue.h
Software/LokoAir Firmware/loko_air-main/Core/settings/: CMakeLists.txt  settings.c  settings.h
Software/LokoAir Firmware/loko_air-main/Core/stm32_bootloader_host_protocol/: CMakeLists.txt  stm32_bootloader_host_protocol.c  stm32_bootloader_host_protocol.h
Software/LokoAir Firmware/loko_air-main/Drivers/: CMakeLists.txt
Software/LokoAir Firmware/loko_air-main/Drivers/STM32WLxx_HAL_Driver/: CMakeLists.txt
Software/LokoAir Firmware/loko_air-main/cmake/: .gitignore  create_target.cmake  define-app-version.cmake  gcc_tools.cmake  git-info.cmake  kconfig.cmake  utils.cmake
Software/LokoAir Firmware/loko_air-main/configs/: cpputest.conf  loko_app.conf  loko_bldr.conf  loko_e5_app.conf  loko_e5_bldr.conf
Software/LokoAir Firmware/loko_air-main/tests/: CMakeLists.txt  common_fake.c  test_runner.cpp
Software/LokoAir Firmware/loko_air-main/tests/spy/: settings_io.cpp  settings_io.hpp
Software/LokoAir Firmware/loko_air-main/tests/src/: cayenne_lpp_test.cpp  cli_test.cpp  crc16_test.cpp  dummy_test.cpp  encrypt_p2p_payload_test.cpp  gnss_trace_test.cpp  log_test__.cpp  lorawan_aes_test.cpp  lwgnps_test.cpp  queue_test.cpp  settings_test.cpp  stm32_bootloader_host_test.cpp
Software/LokoAir Firmware/loko_air-main/tools/: Receiver_main.py  loko-air-trace-example.csv  loko-air-trace-example.gpx  loko-config-requirements.txt  loko-config.py  nmea_generator.py  p2p-decrypt-bin-mode-example.py  p2p-decrypt-text-mode-example.py
Software/LokoAir Firmware/loko_air-main/tools/bin_concat/: bin_concat.py
Software/LokoAir Firmware/loko_air-main/tools/crc_recorder/: crc_recorder.py
Software/LokoAir Firmware/loko_air-main/tools/cspg/: README.md  cspg.py  project.json  settings.template.c  settings.template.h
Software/LokoAir Firmware/loko_air-main/tools/kconfig/: kconfig.py
Software/LokoAir Firmware/loko_air-main/tools/version/: version_tools.py
Software/LokoGround Firmware/: main_1.1.py
(+30 files in other folders)
